# genome_uploader

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  genome_upload.py  pyproject.toml  pytest.ini  requirements-test.yml  requirements.txt  requirements.yml
.github/workflows/: publish.yml  publish_python.yml  pytest_workflow.yml  test.yml
examples/: input_example.tsv
examples/MAG_upload/: ENA_backup.json  registered_MAGs_test.tsv
genomeuploader/: __init__.py  config.py  constants.py  download_webin_cli.py  ena.py  ena_submit.py  exceptions.py  genome_upload.py  taxon_finder.py
tests/: conftest.py  test_checkOutcome_e2e.yaml  test_dummy.py  test_ena.py  test_genome_upload.py  test_taxon_finder.py
tests/fixtures/: input_fixture.tsv  input_with_registered_fixture.tsv
tests/fixtures/bin_upload/: bin_backup.json
tests/fixtures/responses/: private_run.json  private_run_from_assembly.xml  private_sample.xml  private_study.xml  private_study_runs.json  public_run.json  public_run_from_assembly.xml  public_sample.json  public_study.json  public_study_runs.json
tests/unit/: test_ena.py
