[project]
name = "genome_uploader"
version = "2.3.3"
readme = "README.md"
authors = [
  {name = "MGnify team", email = "metagenomics-help@ebi.ac.uk"},
]
license = {text = "Apache Software License 2.0"}
keywords = ["bioinformatics", "tool", "metagenomics"]
description = "Python script to upload bins and MAGs in fasta format to ENA (European Nucleotide Archive). This script generates xmls and manifests necessary for submission with webin-cli."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests==2.26.0",
    "pandas==1.4.1",
    "python-dotenv==1.0.1",
    "numpy==1.24.4",
    "click==8.1.7"
]

[project.urls]
Homepage = "https://github.com/EBI-Metagenomics/genome_uploader"
Issues = "https://github.com/EBI-Metagenomics/genome_uploader/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.3.3",
    "black==23.7.0",
    "ruff==v0.0.286",
    "isort==5.12.0",
    "bump-my-version==0.9.2",
]
test = [
    "pytest==7.4.0",
    "pytest-md==0.2.0",
    "pytest-workflow==2.0.1",
    "pytest-cov==3.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["genomeuploader"]

[project.scripts]
genome_upload = "genomeuploader.genome_upload:main"

[tool.ruff]
ignore = [
    "RUF001", # ruff-specific rules ambiguous-unicode-character-string
    "S101", # flake8-bandit assert
    "S308", # flake8-bandit suspicious-mark-safe-usage
    "E501", # pycodestyle line-too-long
]

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.isort]
forced-separate = ["conftest"]
force-single-line = true

[tool.black]
line-length = 140
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.bumpversion]
current_version = "0.9.0"
commit = true
tag = true

[tool.bumpversion.files]
filename = "genomeuploader/__init__.py"
